enhance preferences component

--- a/frontend/src/app/core/components/faculty/main/main.component.scss
+++ b/frontend/src/app/core/components/faculty/main/main.component.scss
@@ -57,7 +57,7 @@
     align-self: center;
     align-items: stretch;
     gap: var(--spacing-md);
-    background-color: var(--gradient-soft-gray-end);
+    background-color: var(--neutral-mid);
     border-radius: var(--border-radius-xl);
     position: relative;
     display: flex;
