--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -8,6 +8,7 @@
   --neutral-base: #151515;
   --neutral-fade: #1a1a1a26;
   --neutral-light: #ebebeb;
+  --neutral-mid: #e4e4e4;
   --neutral-hover: #2c2c2c30;
   --neutral-option: #a2a2a230;
   --neutral-bar: #d7d7d7;
@@ -52,6 +53,7 @@
   --neutral-base: #dfdfdf;
   --neutral-fade: #d4d4d42a;
   --neutral-light: #1f1f1f;
+  --neutral-mid: #1f1f1f;
   --neutral-hover: #6b6b6b9e;
   --neutral-option: #34343481;
   --neutral-bar: #323232;
