--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -12,6 +12,7 @@
   height: 100%;
 }
 
+/* First row - Header & Units Cards */
 .preferences-row-one {
   @include flex-layout;
   justify-content: space-between;
@@ -76,6 +77,7 @@
   }
 }
 
+/* Second Row - Course List and Table */
 .preferences-row-two {
   height: calc(100vh - 18rem);
   box-sizing: border-box;
@@ -87,111 +89,100 @@
     border-radius: var(--border-radius-md);
     height: 100%;
   }
-}
 
-#courses_container {
-  flex: 3;
-  display: flex;
-  flex-direction: column;
-  font-weight: 500;
-
-  .custom-mat-search {
-    width: 100%;
-
-    span[mat-symbol] {
-      padding: var(--spacing-sm);
-    }
-  }
-}
-
-#courses_list,
-#programs_list {
-  flex: 1;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-
-  .courses-scroll-container,
-  .programs-scroll-container {
-    @include custom-scrollbar;
-    flex: 1;
-    overflow-y: auto;
-    padding-right: var(--spacing-sm);
-
-    .progress-wrapper {
-      height: 100%;
-      @include flex-layout;
-    }
-  }
-}
-
-.cards-label {
-  @include flex-layout($justify: flex-start, $gap: var(--spacing-sm));
-  font-weight: 500;
-  margin-bottom: 1rem;
-
-  button {
-    margin-right: 0.5rem;
-  }
-}
-
-.course-card,
-.program-card {
-  @include default-transition;
-  @include gradient-soft-secondary(30deg);
-  @include flex-layout($justify: space-between);
-  padding: var(--spacing-sm);
-  margin-bottom: var(--spacing-xs);
-  border-radius: var(--border-radius-sm);
-  cursor: pointer;
-
-  .course-info,
-  .program-info {
+  #courses_container {
+    flex: 3;
     display: flex;
     flex-direction: column;
-    gap: var(--spacing-xxs);
-  }
+    font-weight: 500;
 
-  .course-code,
-  .course-title,
-  .program-code {
-    color: var(--neutral-base);
-  }
+    .custom-mat-search {
+      width: 100%;
 
-  .course-code {
-    font-weight: 600;
-    font-size: var(--font-size-sm);
-  }
+      span[mat-symbol] {
+        padding: var(--spacing-sm);
+      }
+    }
 
-  .course-title {
-    font-weight: 400;
-    font-size: var(--font-size-md);
-  }
+    #courses_list,
+    #programs_list {
+      flex: 1;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
 
-  .program-code {
-    font-weight: 600;
-    font-size: var(--font-size-md);
-  }
+      .arrow_back {
+        cursor: pointer;
+        border-radius: 100%;
 
-  .program-title {
-    font-weight: 400;
-  }
+        &:hover {
+          background-color: var(--neutral-bar);
+        }
+      }
 
-  .add-button {
-    @include flex-layout;
-    color: var(--neutral-base);
+      .cards-label {
+        @include flex-layout($justify: flex-start, $gap: var(--spacing-sm));
+        font-weight: 500;
+        margin-bottom: 1rem;
+
+        button {
+          margin-right: 0.5rem;
+        }
+      }
+    }
+
+    .courses-scroll-container,
+    .programs-scroll-container {
+      @include custom-scrollbar;
+      flex: 1;
+      overflow-y: auto;
+      padding-right: var(--spacing-sm);
+
+      .progress-wrapper {
+        height: 100%;
+        @include flex-layout;
+      }
+    }
+
+    .course-card,
+    .program-card {
+      @include default-transition;
+      @include gradient-soft-secondary(30deg);
+      @include flex-layout($justify: space-between);
+      padding: var(--spacing-sm);
+      margin-bottom: var(--spacing-xs);
+      border-radius: var(--border-radius-sm);
+      cursor: pointer;
+
+      .course-info,
+      .program-info {
+        display: flex;
+        flex-direction: column;
+        gap: var(--spacing-xxs);
+      }
+
+      .course-code,
+      .program-code {
+        font-weight: 600;
+        font-size: var(--font-size-md);
+        color: var(--neutral-base);
+      }
+
+      .course-title,
+      .program-title {
+        font-weight: 400;
+        font-size: var(--font-size-md);
+      }
+
+      .add-button {
+        @include flex-layout;
+        color: var(--neutral-base);
+      }
+    }
   }
 }
 
-.arrow_back {
-  cursor: pointer;
-  border-radius: 100%;
-
-  &:hover {
-    background-color: var(--neutral-bar);
-  }
-}
-
+/* Preferences Table Styling */
 #table_container {
   flex: 7;
   overflow: auto;
