enhance preferences table and behavior

--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -25,7 +25,7 @@
 
   --error-base: #800000;
 
-  --secondary-text: #a47f1a;
+  --secondary-text: #836816;
   --secondary-hover: #a47f1a0b;
 
   /* Gradient-speficic values */
