--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -4,7 +4,7 @@
     <div id="preferences_title">
       <h1>Set Preferences</h1>
       <p>
-        Submit your preferred subjects and schedule for the upcoming semester.
+        Submit your preferred courses and schedule for the upcoming semester.
       </p>
     </div>
 
@@ -22,6 +22,7 @@
 
   <!-- Preferences second row -->
   <div class="preferences-row-two">
+    <!--Courses List-->
     <div id="courses_container">
       <div id="courses_search">
         <mat-form-field appearance="fill" class="custom-mat-search">
@@ -77,7 +78,7 @@
             mat-symbol="arrow_back"
             (click)="backToProgramSelection()"
           ></span>
-          {{ selectedProgram?.code }} Courses
+          Select {{ selectedProgram?.code }} Courses
         </h3>
         <div class="courses-scroll-container">
           @if (loading) {
@@ -110,14 +111,19 @@
 
     <!-- Preferences Table -->
     <div id="table_container">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z0">
+      <table
+        mat-table
+        [dataSource]="dataSource"
+        class="table-main"
+        class="mat-elevation-z0"
+      >
         <!-- Action Column -->
         <ng-container matColumnDef="action">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef class="table-header"></th>
+          <td mat-cell *matCellDef="let element" class="table-cell">
             <button
               mat-icon-button
-              class="custom-mat-button"
+              class="remove-button"
               (click)="removeCourse(element.course_code)"
             >
               <span mat-symbol="do_not_disturb_on" variant="outlined"></span>
@@ -126,64 +132,86 @@
         </ng-container>
         <!-- # Column -->
         <ng-container matColumnDef="num">
-          <th mat-header-cell *matHeaderCellDef>#</th>
-          <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+          <th mat-header-cell *matHeaderCellDef class="table-header">#</th>
+          <td
+            mat-cell
+            *matCellDef="let element; let i = index"
+            class="table-cell"
+          >
+            {{ i + 1 }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="course_code">
-          <th mat-header-cell *matHeaderCellDef>Course Code</th>
-          <td mat-cell *matCellDef="let element">{{ element.course_code }}</td>
+          <th mat-header-cell *matHeaderCellDef class="table-header">
+            Course Code
+          </th>
+          <td mat-cell *matCellDef="let element" class="table-cell">
+            {{ element.course_code }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="course_title">
-          <th mat-header-cell *matHeaderCellDef>Course Title</th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef class="table-header">
+            Course Title
+          </th>
+          <td mat-cell *matCellDef="let element" class="table-cell">
             {{ element.course_title }}
           </td>
         </ng-container>
 
         <ng-container matColumnDef="lec_hours">
-          <th mat-header-cell *matHeaderCellDef>Lec</th>
-          <td mat-cell *matCellDef="let element">{{ element.lec_hours }}</td>
+          <th mat-header-cell *matHeaderCellDef class="table-header">Lec</th>
+          <td mat-cell *matCellDef="let element" class="table-cell">
+            {{ element.lec_hours }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="lab_hours">
-          <th mat-header-cell *matHeaderCellDef>Lab</th>
-          <td mat-cell *matCellDef="let element">{{ element.lab_hours }}</td>
+          <th mat-header-cell *matHeaderCellDef class="table-header">Lab</th>
+          <td mat-cell *matCellDef="let element" class="table-cell">
+            {{ element.lab_hours }}
+          </td>
         </ng-container>
 
         <ng-container matColumnDef="units">
-          <th mat-header-cell *matHeaderCellDef>Units</th>
-          <td mat-cell *matCellDef="let element">{{ element.units }}</td>
+          <th mat-header-cell *matHeaderCellDef class="table-header">Units</th>
+          <td mat-cell *matCellDef="let element" class="table-cell">
+            {{ element.units }}
+          </td>
         </ng-container>
 
         <!-- Preferred Day Column -->
         <ng-container matColumnDef="preferredDay">
-          <th mat-header-cell *matHeaderCellDef>Preferred Day</th>
-          <td mat-cell *matCellDef="let element">
-            <select
-              class="preferred-day-dropdown"
-              [(ngModel)]="element.preferredDay"
-              (change)="onDayChange(element, $event)"
-              name="preferredDay"
+          <th mat-header-cell *matHeaderCellDef class="table-header">
+            Preferred Day
+          </th>
+          <td mat-cell *matCellDef="let element" class="table-cell">
+            <button
+              mat-button
+              (click)="openDayDialog(element)"
+              class="preferred-button day"
             >
-              <option value="" disabled selected>Select day</option>
-              <option *ngFor="let day of daysOfWeek" [value]="day">
-                {{ day }}
-              </option>
-            </select>
+              <mat-icon fontSet="material-icons-round" class="preferred-icon"
+                >calendar_today</mat-icon
+              >
+              {{ element.preferredDay ? element.preferredDay : "Select day" }}
+            </button>
           </td>
         </ng-container>
 
         <!-- Preferred Time Column -->
         <ng-container matColumnDef="preferredTime">
-          <th mat-header-cell *matHeaderCellDef>Preferred Time</th>
-          <td mat-cell *matCellDef="let element">
+          <th mat-header-cell *matHeaderCellDef class="table-header">
+            Preferred Time
+          </th>
+          <td mat-cell *matCellDef="let element" class="table-cell">
             <button
               mat-button
               (click)="openTimeDialog(element)"
-              class="preferred-time-button"
+              class="preferred-button time"
             >
+              <mat-icon fontSet="material-icons-round">schedule</mat-icon>
               {{
                 element.preferredTime
                   ? (element.preferredTime | timeFormat)
@@ -195,13 +223,17 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-        <!-- No data row -->
-        <tr class="mat-row no-data-row" *matNoDataRow>
+        <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="9">
-            No preferences have been added yet.
+            <div class="no-data-text">
+              <span mat-symbol="info"></span>
+              <span>No preferences added yet.</span>
+            </div>
           </td>
         </tr>
       </table>
+
+      <!--Table Pseudo Footer-->
       <div class="table-footer">
         <!-- Remove All Button -->
         <div
@@ -212,7 +244,7 @@
           "
           [class.disabled]="isRemoveDisabled"
         >
-          <span mat-symbol="delete_sweep"></span>
+          <span mat-symbol="delete_sweep" class="remove"></span>
           <span class="button-text remove">Remove all</span>
         </div>
 
@@ -222,13 +254,13 @@
           (click)="!isSubmitDisabled && submitPreferences()"
           [matTooltip]="
             isSubmitDisabled
-              ? 'Select one or more course with all having preferred day and time.'
+              ? 'Select one or more courses, ensuring each has a preferred day and time.'
               : ''
           "
           [class.disabled]="isSubmitDisabled"
         >
-          <span class="button-text send">Submit Preferences</span>
-          <span mat-symbol="send"></span>
+          <span class="button-text submit">Submit Preferences</span>
+          <span mat-symbol="done_all" class="submit"></span>
         </div>
       </div>
     </div>
