--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -79,10 +79,9 @@
 
 /* Second Row - Course List and Table */
 .preferences-row-two {
+  @include flex-layout($gap: var(--spacing-lg));
   height: calc(100vh - 18rem);
   box-sizing: border-box;
-  display: flex;
-  gap: var(--spacing-lg);
 
   #courses_container,
   #table_container {
@@ -91,7 +90,7 @@
   }
 
   #courses_container {
-    flex: 3;
+    flex: 2;
     display: flex;
     flex-direction: column;
     font-weight: 500;
@@ -184,152 +183,104 @@
 
 /* Preferences Table Styling */
 #table_container {
-  flex: 7;
-  overflow: auto;
-  position: relative;
-  background-color: var(--neutral-light);
   @include hide-scrollbar;
-  display: flex;
-  flex-direction: column;
+  @include flex-layout($direction: column, $align: none, $justify: none);
+  flex: 5;
+  overflow: auto;
+  background-color: var(--neutral-light);
 
-  .mat-mdc-table {
+  .table-main {
     width: 100%;
     background-color: var(--neutral-light);
-    transition: none !important;
     table-layout: fixed;
+  }
+
+  .table-header {
+    @include sticky;
+    color: white;
+    text-align: center;
+    background-color: var(--primary-one);
+  }
+
+  .table-cell {
+    padding: var(--spacing-sm);
+    text-wrap: wrap;
+    background-color: var(--neutral-light);
+
+    .remove-button {
+      @include flex-layout;
+
+      span[mat-symbol] {
+        font-size: var(--font-size-lg);
+        color: var(--primary-text);
+        @include flex-layout;
+      }
+    }
+  }
+
+  .no-data-text {
+    @include flex-layout($gap: var(--spacing-xs));
+    width: 100%;
+    text-align: center;
+    background-color: var(--neutral-light);
+    font-size: var(--font-size-md);
+    padding: var(--spacing-lg) 0;
+
+    span {
+      opacity: var(--opacity-semi-opaque);
+    }
+
+    span[mat-symbol] {
+      font-size: 100%;
+    }
   }
 
   .table-footer {
     @include flex-layout($justify: space-between, $gap: var(--spacing-xs));
-    flex-shrink: 0;
+    @include sticky;
     margin-top: auto;
-    position: sticky;
-    bottom: 0;
-    z-index: 2;
     background-color: var(--neutral-bar);
-    padding: var(--spacing-xxs) var(--spacing-xxs);
 
     .button-container {
       @include flex-layout($gap: var(--spacing-sm));
-      padding: var(--spacing-xs) var(--spacing-sm);
-      border-radius: var(--border-radius-xl);
-      cursor: pointer;
+      padding: var(--spacing-sm) var(--spacing-sm);
+      font-weight: 500;
       user-select: none;
+      cursor: pointer;
 
-      span {
-        color: var(--neutral-base);
-        @include default-transition(true);
-      }
-
-      .button-text {
-        font-weight: 500;
-
-        &.remove {
-          color: var(--primary-text);
-        }
-      }
-
-      span[mat-symbol="delete_sweep"] {
+      .remove {
         color: var(--primary-text);
       }
 
-      &:hover {
-        .send,
-        span[mat-symbol="send"] {
-          color: var(--secondary-text);
-        }
+      .submit {
+        color: var(--secondary-text);
+      }
+
+      &.disabled {
+        opacity: var(--opacity-half);
+        cursor: not-allowed;
       }
     }
-
-    .button-container.disabled {
-      &:hover {
-        .send,
-        span[mat-symbol="send"] {
-          color: var(--neutral-base);
-        }
-      }
-      opacity: 0.6;
-      cursor: not-allowed;
-    }
   }
 
-  .mat-mdc-header-cell {
-    background-color: var(--primary-one);
-    color: white;
-    font-weight: 500;
-    font-size: var(--font-size-md);
-    text-align: center;
-    position: sticky;
-    top: 0;
-    z-index: 2;
-  }
-
-  .mat-mdc-cell {
-    padding: var(--spacing-sm);
-    text-align: center;
-    text-wrap: wrap;
-  }
-
-  .custom-mat-button {
+  .preferred-icon {
     @include flex-layout;
-
-    span[mat-symbol] {
-      font-size: var(--font-size-lg);
-      color: var(--primary-one);
-      @include flex-layout;
-    }
+    font-size: 100%;
   }
 
-  @mixin column-width($width) {
-    width: $width;
-    min-width: $width;
-    max-width: $width;
-  }
-
-  .mat-column-action {
-    @include column-width(60px);
-  }
-  .mat-column-num {
-    @include column-width(50px);
-  }
-  .mat-column-lec_hours,
-  .mat-column-lab_hours,
-  .mat-column-total_units {
-    @include column-width(70px);
-  }
-
-  .mat-mdc-no-data-row {
-    height: var(--spacing-4xl);
-  }
-
-  .mat-mdc-no-data-row td {
-    font-size: initial;
-    text-align: center;
-  }
-
-  .preferred-day-dropdown {
-    border: none;
-    padding: var(--spacing-sm) var(--spacing-xs);
-    background-color: var(--neutral-light);
-    font-size: var(--font-size-sm);
+  .preferred-button {
+    @include flex-layout;
     color: var(--primary-text);
-    border-radius: var(--border-radius-xl);
-    outline: none;
-    font-weight: 500;
-    cursor: pointer;
-
-    option {
-      background-color: var(--neutral-light);
-      color: var(--neutral-base);
-    }
-
-    &:hover {
-      background-color: var(--primary-hover);
-      border-radius: var(--border-radius-xl);
-    }
   }
+}
 
-  .preferred-time-button {
-    color: var(--primary-text);
+/* Media Query */
+@media screen and (max-width: 1024px) {
+  .preferences-row-two {
+    @include flex-layout(
+      $direction: column,
+      $align: stretch,
+      $gap: var(--spacing-lg)
+    );
   }
 }
