--- a/frontend/src/app/shared/dialog-time/dialog-time.component.html
+++ b/frontend/src/app/shared/dialog-time/dialog-time.component.html
@@ -1,7 +1,7 @@
 <div class="material-dialog-container">
   <!--Dialog Title-->
   <h2 mat-dialog-title class="dialog-title">
-    <span mat-symbol="schedule"></span>
+    <!-- <span mat-symbol="schedule"></span> -->
     <span id="title_text">Select Time</span>
   </h2>
   <!--Dialog fields-->
