--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -22,6 +22,14 @@
   box-sizing: border-box;
 }
 
+/* Sticky Object */
+@mixin sticky($top: 0, $bottom: 0, $z-index: 2) {
+  position: sticky;
+  top: $top;
+  bottom: $bottom;
+  z-index: $z-index;
+}
+
 /* Default page transition. Add the true parameter (optional) to include text */
 @mixin default-transition($include-color: false) {
   transition: background-color 0.3s ease;
