minor improvements in preferences

--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.html
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.html
@@ -36,6 +36,7 @@
           }
         </mat-form-field>
       </div>
+      <!--Filter Menu-->
       <mat-menu #filterMenu="matMenu">
         @for (year of yearLevels; track year) {
         <button mat-menu-item (click)="filterByYear(year)">
