ready home component for Full Calendar

--- a/frontend/src/app/core/components/faculty/home/home.component.scss
+++ b/frontend/src/app/core/components/faculty/home/home.component.scss
@@ -9,9 +9,7 @@
 }
 
 .home-row-one {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  @include flex-layout($justify: space-between);
 
   #home_greetings {
     display: flex;
