--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -15,6 +15,7 @@
   --neutral-sidebar: #f0f0f0;
   --neutral-button: #535353;
   --neutral-button-lighter: #474747;
+  --neutral-space: #e7e7e7;
 
   /* Primary colors variations */
   --primary-one: #800000;
@@ -22,6 +23,8 @@
   --primary-fade: #80000020;
   --primary-text: #800000;
   --primary-hover: #e3d9d9;
+
+  --primary-one-fade: #98292947;
 
   --error-base: #800000;
 
@@ -60,6 +63,7 @@
   --neutral-sidebar: #181818;
   --neutral-button: #3a3a3a;
   --neutral-button-lighter: #afafaf;
+  --neutral-space: #171717;
 
   /* Primary colors variations */
   --primary-one: #a93232;
@@ -67,6 +71,8 @@
   --primary-fade: #a932321a;
   --primary-text: #e15d5d;
   --primary-hover: #2b2121;
+
+  --primary-one-fade: #ff3c3c38;
 
   --error-base: #b43a3a;
 
