minor corrections on color contrast

--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -8,14 +8,14 @@
   --neutral-base: #151515;
   --neutral-fade: #1a1a1a26;
   --neutral-light: #ebebeb;
-  --neutral-mid: #e4e4e4;
+  --neutral-mid: #e9e9e9;
   --neutral-hover: #2c2c2c30;
   --neutral-option: #a2a2a230;
   --neutral-bar: #d7d7d7;
   --neutral-sidebar: #f0f0f0;
   --neutral-button: #535353;
   --neutral-button-lighter: #474747;
-  --neutral-space: #e7e7e7;
+  --neutral-space: #efefef;
 
   /* Primary colors variations */
   --primary-one: #800000;
