reposition schedule validator

--- a/frontend/src/app/shared/table-dialog/table-dialog.component.html
+++ b/frontend/src/app/shared/table-dialog/table-dialog.component.html
@@ -4,21 +4,7 @@
   </h2>
 
   <div mat-dialog-content class="table-dialog-content">
-    @if (isEditDialog) {
-    <div class="schedule-validator">
-      <div
-        class="validation-message"
-        [ngClass]="{ conflict: isConflict, 'no-conflict': !isConflict }"
-      >
-        <mat-icon>{{ isConflict ? "error" : "check_circle" }}</mat-icon>
-        <span>{{
-          isConflict
-            ? "Warning: Schedule conflicts have been detected. "
-            : "No scheduling conflicts have been detected."
-        }}</span>
-      </div>
-    </div>
-    } @if (data.isManageList) {
+    @if (data.isManageList) {
     <div class="academic-year-list">
       @for (year of data.academicYearList; track year) {
       <div class="academic-year-item">
@@ -190,6 +176,21 @@
       } } } }
     </form>
     }
+    @if (isEditDialog) {
+      <div class="schedule-validator">
+        <div
+          class="validation-message"
+          [ngClass]="{ conflict: isConflict, 'no-conflict': !isConflict }"
+        >
+          <mat-icon>{{ isConflict ? "error" : "check_circle" }}</mat-icon>
+          <span>{{
+            isConflict
+              ? "Warning: Schedule conflicts have been detected. "
+              : "No scheduling conflicts have been detected."
+          }}</span>
+        </div>
+      </div>
+      }
   </div>
 
   <div mat-dialog-actions class="table-dialog-button">
