--- a/frontend/src/styles/theme.scss
+++ b/frontend/src/styles/theme.scss
@@ -2,6 +2,7 @@
   /* Page background */
   --blur-bg: #ffffffcc;
   --main-bg: #ffffff;
+  --admin-bg: #ededed;
   --blur-bg-strong: #ffffffe3;
 
   /* Neutral colors for text, element backgrounds, etc. */
@@ -50,6 +51,7 @@
   /* Page background */
   --blur-bg: #171717f1;
   --main-bg: #111111;
+  --admin-bg: #181818;
   --blur-bg-strong: #171717f1;
 
   /* Neutral colors for text, element backgrounds, etc. */
