--- a/frontend/src/app/core/components/admin/main/main.component.scss
+++ b/frontend/src/app/core/components/admin/main/main.component.scss
@@ -8,13 +8,13 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  background-color: var(--neutral-sidebar);
+  background-color: var(--admin-bg);
   @include default-transition;
 }
 
 .sidenav-bar {
   width: 16rem;
-  background-color: var(--neutral-sidebar);
+  background-color: var(--admin-bg);
   padding: var(--spacing-sm) var(--spacing-md);
   @include default-transition;
 
@@ -151,7 +151,7 @@
 
           .account-text {
             text-align: left;
-            line-height: var(--line-height-sm);
+            line-height: var(--line-height-md);
 
             .account-name {
               font-weight: 500;
