--- a/frontend/src/app/core/components/admin/main/main.component.scss
+++ b/frontend/src/app/core/components/admin/main/main.component.scss
@@ -135,6 +135,14 @@
             border-radius: 50%;
             padding: var(--spacing-smx);
             cursor: pointer;
+
+            .light-icon {
+              color: var(--primary-one);
+            }
+
+            .dark-icon {
+              color: var(--secondary-text);
+            }
           }
 
           mat-icon {
