enhance UI across the system

--- a/frontend/src/app/auth/login/login.component.scss
+++ b/frontend/src/app/auth/login/login.component.scss
@@ -121,7 +121,7 @@
       }
 
       p {
-        font-size: var(--font-size-lg);
+        font-size: var(--font-size-mdx);
         margin: 0;
       }
     }
@@ -204,7 +204,7 @@
     gap: var(--spacing-lg);
 
     #terms_text {
-      font-size: var(--font-size-sm);
+      font-size: var(--font-size-md);
       text-align: center;
 
       span {
