--- a/frontend/src/app/core/components/superadmin/main/main.component.scss
+++ b/frontend/src/app/core/components/superadmin/main/main.component.scss
@@ -96,7 +96,7 @@
     $direction: column,
     $align: none,
     $justify: none,
-    $gap: var(--spacing-md)
+    $gap: var(--spacing-xl)
   );
   padding: var(--spacing-2xl);
   height: 100%;
