--- a/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.scss
+++ b/frontend/src/app/core/components/superadmin/maintenance/programs/programs.component.scss
@@ -4,7 +4,7 @@
   @include default-transition;
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-lg);
+  gap: var(--spacing-xs);
   height: 100%;
 }
 
