--- a/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
+++ b/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.html
@@ -1,9 +1,10 @@
-<div class="faculty-management-container">
+<div class="faculty-management-container" [@fadeAnimation]>
   <!-- Table Header -->
   <div class="faculty-header-container">
     <app-table-header
       [searchLabel]="'Search Faculty'"
       [addButtonLabel]="'Add Faculty'"
+      [inputFields]="headerInputFields"
       (search)="onSearch($event)"
       (add)="openAddFacultyDialog()"
     ></app-table-header>
