--- a/frontend/src/app/core/components/superadmin/main/main.component.scss
+++ b/frontend/src/app/core/components/superadmin/main/main.component.scss
@@ -27,7 +27,7 @@
     .header-name {
       @include flex-layout($direction: column);
       text-align: center;
-      line-height: var(--line-height-md);
+      line-height: var(--line-height-mdx);
 
       .university-name,
       .system-name {
@@ -37,7 +37,7 @@
       }
 
       .university-name {
-        color: var(--primary-one);
+        color: var(--primary-text);
       }
     }
   }
