--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -21,6 +21,7 @@
   --font-header: "Trajan Pro", serif;
 
   --font-size-xs: 0.65rem;
+  --font-size-xsx: 0.8rem;
   --font-size-sm: 0.875rem;
   --font-size-smx: 0.925rem;
   --font-size-md: 1rem;
@@ -36,6 +37,7 @@
   // Line heights
   --line-height-sm: 1.25;
   --line-height-md: 1.5;
+  --line-height-mdx: 1.6;
   --line-height-lg: 1.75;
 
   // Spacing
