refactor admin overview

--- a/frontend/src/app/core/components/admin/overview/overview.component.html
+++ b/frontend/src/app/core/components/admin/overview/overview.component.html
@@ -4,8 +4,7 @@
     <div class="overview-greetings">
       <h1 id="admin_name">Hello, Admin Marissa!</h1>
       <p id="description">
-        Here's the key overview of the loading and scheduling this
-        semester.
+        Here's the key overview of the loading and scheduling this semester.
       </p>
     </div>
     <div class="active-year-sem-container">
@@ -67,7 +66,9 @@
       <!--Schedule Overview-->
       <div class="schedule-overview card">
         <!-- Content for Schedule Overview -->
-        <h2 class="card-title">Schedule Overview</h2>
+        <h2 class="card-title">
+          <span mat-symbol="date_range"></span>Schedule Overview
+        </h2>
       </div>
     </div>
 
@@ -108,7 +109,9 @@
         </div>
       </div>
       <div class="recent-activities card">
-        <h2 class="card-title"><span mat-symbol="history"></span>Recent Activities</h2>
+        <h2 class="card-title">
+          <span mat-symbol="history"></span>Recent Activities
+        </h2>
         <!-- Content for Recent Activities -->
       </div>
     </div>
