add send mail dialog

--- a/frontend/src/app/core/components/admin/overview/overview.component.html
+++ b/frontend/src/app/core/components/admin/overview/overview.component.html
@@ -83,7 +83,7 @@
           <!--Item Group One-->
           <div class="item-group one">
             <!--Action: Email Faculty-->
-            <div class="item send-email">
+            <div class="item send-email" (click)="openSendEmailDialog()">
               <span mat-symbol="email"></span>
               <span class="desc">Send Email to Faculty</span>
             </div>
