adjust input field type

--- a/frontend/src/app/core/components/admin/reports/report-rooms/report-rooms.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-rooms/report-rooms.component.html
@@ -1,5 +1,6 @@
 <div class="report-header" [@fadeAnimation]>
   <app-table-header
+    [searchLabel]="'Search Rooms'"
     [inputFields]="inputFields"
     [showActiveYearAndSem]="true"
     [activeYear]="activeYear"
