--- a/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
+++ b/frontend/src/app/core/components/admin/reports/report-faculty/report-faculty.component.html
@@ -1,5 +1,6 @@
 <div class="report-header" [@fadeAnimation]>
   <app-table-header
+  [searchLabel]="'Search Faculty'"
     [inputFields]="inputFields"
     [showButtons]="false"
     [showActiveYearAndSem]="true"
