Refactor fetching courses based on active curriculum year

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -13,7 +13,7 @@
     section: selectedSection
   }"
   [activeYear]="activeYear"
-  [activeSemester]="activeSemester"
+  [activeSemester]="activeSemesterLabel"
   (activeYearSemClick)="openActiveYearSemesterDialog()"
 ></app-table-header>
   </div>
