--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -1,21 +1,21 @@
 <div class="scheduling-container">
   <div class="scheduling-header-container" [@fadeAnimation]>
     <app-table-header
-  [inputFields]="headerInputFields"
-  [showExportButton]="false"
-  [showAddButton]="false"
-  [showActiveYearAndSem]="true"
-  [showButtons]="false"
-  (inputChange)="onInputChange($event)"
-  [selectedValues]="{
-    program: selectedProgram,
-    yearLevel: selectedYear,
-    section: selectedSection
-  }"
-  [activeYear]="activeYear"
-  [activeSemester]="activeSemesterLabel"
-  (activeYearSemClick)="openActiveYearSemesterDialog()"
-></app-table-header>
+      [inputFields]="headerInputFields"
+      [showExportButton]="false"
+      [showAddButton]="false"
+      [showActiveYearAndSem]="true"
+      [showButtons]="false"
+      (inputChange)="onInputChange($event)"
+      [selectedValues]="{
+        program: selectedProgram,
+        yearLevel: 'Year ' + selectedYear,
+        section: selectedSection
+      }"
+      [activeYear]="activeYear"
+      [activeSemester]="activeSemesterLabel"
+      (activeYearSemClick)="openActiveYearSemesterDialog()"
+    ></app-table-header>
   </div>
 
   <div class="scheduling-table-container" [@pageFloatUpAnimation]>
@@ -23,8 +23,12 @@
       <table mat-table [dataSource]="schedules" class="custom-table">
         <!-- Index Column -->
         <ng-container matColumnDef="index">
-          <th mat-header-cell *matHeaderCellDef class="custom-header index">#</th>
-          <td mat-cell *matCellDef="let element; let i = index" class="index">{{ i + 1 }}</td>
+          <th mat-header-cell *matHeaderCellDef class="custom-header index">
+            #
+          </th>
+          <td mat-cell *matCellDef="let element; let i = index" class="index">
+            {{ i + 1 }}
+          </td>
         </ng-container>
 
         <!-- Course Code Column -->
