convert year levels to string

--- a/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
+++ b/frontend/src/app/core/components/admin/scheduling/scheduling.component.html
@@ -9,7 +9,7 @@
       (inputChange)="onInputChange($event)"
       [selectedValues]="{
         program: selectedProgram,
-        yearLevel: 'Year ' + selectedYear,
+        yearLevel: selectedYear,
         section: selectedSection
       }"
       [activeYear]="activeYear"
